Bug 89477 - include/no_extern_c.h:47:1: error: template with C linkage
Summary: include/no_extern_c.h:47:1: error: template with C linkage
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium blocker
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2015-03-06 20:01 UTC by Vinson Lee
Modified: 2015-03-09 16:48 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2015-03-06 20:01:42 UTC
mesa: bf061a3d2ec00aa486cda0fb4af04e50e8522868 (master 10.6.0-devel)

  CXX      codegen/nv50_ir_from_tgsi.lo
In file included from ../../../../include/c99_compat.h:28:0,
                 from ../../../../src/gallium/include/pipe/p_compiler.h:32,
                 from ../../../../src/gallium/auxiliary/tgsi/tgsi_dump.h:31,
                 from codegen/nv50_ir_from_tgsi.cpp:24:
../../../../include/no_extern_c.h:47:1: error: template with C linkage
 template<class T> class _IncludeInsideExternCNotPortable;
 ^


Build error is introduced with commit bfb4db83b618d57fcc5f0c9e9fdb3a7ff33d07f3.

commit bfb4db83b618d57fcc5f0c9e9fdb3a7ff33d07f3
Author: José Fonseca <jfonseca@vmware.com>
Date:   Thu Dec 11 22:14:14 2014 +0000

    include: Add helper header to help trap includes inside extern C.
    
    This is just to help repro and fixing these issues with any C++ compiler --
Comment 1 Mark Janes 2015-03-06 20:34:18 UTC
Can you please include your configure line?  I'm having trouble reproducing your failure.
Comment 2 Mark Janes 2015-03-06 21:16:19 UTC
patch sent to list.
Comment 3 Mark Janes 2015-03-09 16:48:31 UTC
This was pushed to master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.